2003-05-22  Brian Warner  <warner@lothar.com>

	* twisted/test/test_newjelly.py (JellyTestCase.testUnicode): make
	sure unicode strings don't mutate into plain ones

2003-05-21  Brian Warner  <warner@lothar.com>

	* twisted/internet/tcp.py (Connection.getTcpKeepAlive): Add
	functions to control SO_KEEPALIVE bit on TCP sockets.
	* twisted/internet/interfaces.py (ITCPTransport): ditto
	* twisted/test/test_tcp.py (LoopbackTestCase.testTcpKeepAlive):
	test it

	* doc/howto/test-standard.html: document test-case-name format

	* doc/howto/coding-standard.html: encourage test-case-name tags

	* twisted/protocols/htb.py, twisted/protocols/irc.py,
	twisted/protocols/pcp.py, twisted/python/text.py,
	twisted/spread/pb.py, twisted/trial/remote.py: clean up
	test-case-name tags

	* twisted/scripts/trial.py (Options.opt_testmodule): try to handle
	test-case-name tags the same way emacs does

2003-05-21  Christopher Armstrong  <radix@twistedmatrix.com>

	* bin/coil, doc/man/coil.1, doc/man/index.html: removed. Coil
	isn't being maintained, pending a total rewrite.

2003-05-20  Brian Warner  <warner@lothar.com>

	* twisted/python/reflect.py (namedAny): re-raise ImportErrors that
	happen inside the module being imported, instead of assuming that
	it means the module doesn't exist.

2003-05-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/web/server.py: Added two new methods to Request objects:
	rememberRootURL and getRootURL. Calling rememberRootURL will store
	the already-processed part of the URL on the request, and calling
	getRootURL will return it. This is so you can more easily link to
	disparate parts of your web application.

	* twisted/web/woven/{page,widgets}.py: Updated Woven to take
	advantage of previously-mentioned Request changes. You can now say
	`appRoot = True' in the Page subclass that is instantiated by your
	.rpy (for example), and then use a RootRelativeLink widget
	(exactly the same way you use a Link widget) to get a link